--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>TODO</p>
+            <p>Atualmente em transição de carreira através do Dev Club para ingressar como Desenvolvedora Full Stack.
+              Tenho em mente que o trabalho em equipe com pessoas multidisciplinares é essencial para a realização de bons projetos. Sou uma pessoa comunicativa, empenhada, organizada, focada, empática, possuo ótimo relacionamento interpessoal e rápida adaptação a novos ambientes.
+              Minha missão é colaborar com a inclusão de mais mulheres, pretos e pardos na área da tecnologia!</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -98,15 +100,15 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Lotérica Afonso Pena</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov/2022 - <span class="w3-tag w3-teal w3-round">Jan/2023</span></h6>
+              <p>Recebimento de contas, Detran, vendas de bolões e jogos e atendimento no geral ao público.</p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Atento S/A</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan/2016 - Jun/2021</h6>
+              <p>Atendimento e suporte ao cliente pelo telefone buscando seu encantamento</p>
             </div>
           </div>
   
@@ -116,23 +118,23 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho/2022 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
+                <li><a href="https://www.dio.me/certificate/65F35EE4" target="_blank">Criando um Projeto com HTML/CSS para Listagem de Pokémon</a></li>
+                <li><a href="https://www.dio.me/certificate/6538DEB6" target="_blank">Introdução a Criação de Websites com HTML5 e CSS3</a></li>
+                <li><a href="https://www.dio.me/certificate/85B28FBB" target="_blank">Primeiros Passos Com JavaScript</a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b></b>Unidombosco</h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Ago/2022 - Dez/2024</h6>
+              <p>Superior em Tecnologia de Defesa Cibernética</p>
             </div>
           </div>
 
