--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a href="https://github.com/Csilsouza/Instagram-Dio" target="_blank">Csilsouza/Instagram-Dio</a>
               </h6>
-              <p>TODO</p>
+              <p>Recriando a página inicial do Instagram com HTML e CSS</p>
               <hr>
             </div>
             <div class="w3-container">
@@ -170,11 +170,10 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="LINK_GITHUB" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="LINK_LINKEDIN" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-      <a href="LINK_FACEBOOK" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-      <a href="LINK_INSTAGRAM" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-      <a href="LINK_TWITTER" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+      <a href="github.com/Csilsouza" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/cristianasilvasouza/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="https:facebook.com/crissouza" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+      <a href="https:instagram.com/souza_cris1240" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
