--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Lotérica Afonso Pena</b></h5>
               <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov/2022 - <span class="w3-tag w3-teal w3-round">Jan/2023</span></h6>
-              <p>Recebimento de contas, Detran, vendas de bolões e jogos e atendimento no geral ao público.</p>
+              <p>Recebimento de contas, Detran, vendas de bolões e jogos e atendimento no geral ao público</p>
               <hr>
             </div>
             <div class="w3-container">
@@ -172,8 +172,8 @@
       <p>Minhas Redes Sociais</p>
       <a href="github.com/Csilsouza" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="https://www.linkedin.com/in/cristianasilvasouza/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-      <a href="https:facebook.com/crissouza" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-      <a href="https:instagram.com/souza_cris1240" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+      <a href="https://facebook.com/crissouza" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+      <a href="https://instagram.com/souza_cris1240" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
