--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="github.com/Csilsouza" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://github.com/Csilsouza" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="https://www.linkedin.com/in/cristianasilvasouza/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <a href="https://facebook.com/crissouza" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
       <a href="https://instagram.com/souza_cris1240" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
