--- a/index.html
+++ b/index.html
@@ -36,47 +36,47 @@
               <h2>Cristiana da Silva Souza</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>DESENVOLVEDOR WEB</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>SANTOS-SP</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>cristianasouza028@gmail.com</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>13 99657-2658</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>DESENVOLVEDOR WEB</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>SANTOS-SP</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>cristianasouza028@gmail.com</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-dark-grey"></i>13 99657-2658</p>
               <hr>
   
               <p class="w3-large">
-                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
+                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-dark-grey"></i>Skills</b>
               </p>
               <p>HTML, CSS</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-dark-grey" style="width:50%">50%</div>
               </div>
               <p>GITHUB</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-dark-grey" style="width:50%">50%</div>
               </div>
               <p>JAVASCRIPT</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">30%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-dark-grey" style="width:50%">30%</div>
               </div>
               <p>NODE</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">20%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-dark-grey" style="width:50%">20%</div>
               </div>
               <br>
   
               <p class="w3-large w3-text-theme">
-                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Idiomas</b>
+                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-dark-grey"></i>Idiomas</b>
               </p>
               <p>PORTUGUÊS</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+                <div class="w3-round-xlarge w3-dark-grey" style="height:24px;width:100%"></div>
               </div>
               <p>INGLÊS</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:10%"></div>
+                <div class="w3-round-xlarge w3-dark-grey" style="height:24px;width:10%"></div>
               </div>
               <p>ESPANHOL</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:10%"></div>
+                <div class="w3-round-xlarge w3-dark-grey" style="height:24px;width:10%"></div>
               </div>
               <br>
             </div>
@@ -89,7 +89,7 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-dark-grey"></i>Sobre</h2>
             <p>Atualmente em transição de carreira através do Dev Club para ingressar como Desenvolvedora Full Stack.
               Tenho em mente que o trabalho em equipe com pessoas multidisciplinares é essencial para a realização de bons projetos. Sou uma pessoa comunicativa, empenhada, organizada, focada, empática, possuo ótimo relacionamento interpessoal e rápida adaptação a novos ambientes.
               Minha missão é colaborar com a inclusão de mais mulheres, pretos e pardos na área da tecnologia!</p>
@@ -97,28 +97,28 @@
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
+              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-dark-grey"></i>Experiências
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Lotérica Afonso Pena</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov/2022 - <span class="w3-tag w3-teal w3-round">Jan/2023</span></h6>
+              <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov/2022 - <span class="w3-tag w3-dark-grey w3-round">Jan/2023</span></h6>
               <p>Recebimento de contas, Detran, vendas de bolões e jogos e atendimento no geral ao público</p>
               <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Atento S/A</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan/2016 - Jun/2021</h6>
+              <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan/2016 - Jun/2021</h6>
               <p>Atendimento e suporte ao cliente pelo telefone buscando seu encantamento</p>
             </div>
           </div>
   
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
+              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-dark-grey"></i>Educação
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho/2022 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Julho/2022 - <span class="w3-tag w3-dark-grey w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
@@ -133,17 +133,17 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b></b>Unidombosco</h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Ago/2022 - Dez/2024</h6>
+              <h6 class="w3-text-dark-grey"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Ago/2022 - Dez/2024</h6>
               <p>Superior em Tecnologia de Defesa Cibernética</p>
             </div>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projetos
+              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-dark-grey"></i>Projetos
             </h2>
             <div class="w3-container">
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-dark-grey">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/Csilsouza/Instagram-Dio" target="_blank">Csilsouza/Instagram-Dio</a>
               </h6>
@@ -161,7 +161,7 @@
       <!-- End Page Container -->
     </div>
   
-    <footer class="w3-container w3-teal w3-center w3-margin-top">
+    <footer class="w3-container w3-dark-grey w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
       <a href="https://github.com/Csilsouza" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="https://www.linkedin.com/in/cristianasilvasouza/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
